# openfoam-cmake-app

./: .gitignore  README.md
helloFoam/: CMakeLists.txt  helloFoam.C
